[package]
name = "mdot2"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
log = "*"
tiled = "*"
serde = "*"
#amethyst_gltf = "*"
#rand = "*"
#amethyst_physics = "*"
#amethyst_nphysics = "*"

[features]
# default = ["vulkan"]
# empty = ["amethyst/empty"]
# metal = ["amethyst/metal"]
# vulkan = ["amethyst/vulkan"]
default = ["vulkan"]

vulkan = ["amethyst/vulkan"]

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false